Fix navbar collapse; modify login page; add flatpages to initial data

--- a/trans/static/css/login.css
+++ b/trans/static/css/login.css
@@ -4,8 +4,8 @@ html {
 
 .container {
     height: 505px;
-    margin-top: 150px;
-    margin-bottom: 100px;
+    margin-top: 130px;
+    margin-bottom: 150px;
 }
 
 .wrapper {
@@ -57,12 +57,11 @@ input[type="checkbox"] {
 
 .img-container {
     width: 100%;
-    margin-bottom: 15px;
     text-align: center;
 }
 
 .img-container img {
-    width: 70%;
+    width: 65%;
 }
 
 .btn-login {
